app/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: server
          image: diadem27/to-do-app
          ports:
            - containerPort: 3000
